--- a/SimonGilbert.Blog/Dockerfile
+++ b/SimonGilbert.Blog/Dockerfile
@@ -13,5 +13,5 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
 COPY --from=build-env /app/out .
-ENTRYPOINT ["dotnet", "SimonGilbertBlog.dll"]
+ENTRYPOINT ["dotnet", "SimonGilbert.Blog.dll"]
 
